[package]
name = "coordinates_suite"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clipboard-win = "5.4.0"
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = "0.31.1"
egui_plot = "0.31.0"
image = "0.25.5"
itertools = "0.14.0"
regex = "1.11.1"
rfd = "0.15.3"
utm = "0.1.6"
walkers = "0.35.0"

[build-dependencies]
chrono = "0.4.40"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.5", features = ["winnt", "winuser"] }
